--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <meta name="keywords" content="ofertas, compras, descontos, eletrônicos, moda, Brasil">
   <title>Centro de Compras - Ofertas do Dia</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
-  <link rel="preload" href="logos/logoscentrodecompras.webp" as="image">
+  <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <!-- Adicionado CDN do Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
   <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
@@ -22,13 +23,9 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="hamburger" onclick="toggleMenu()">☰</div>
     <div class="logo-container">
-      <a href="index">
-        <picture>
-          <source srcset="logos/logoscentrodecompras.webp" type="image/webp">
-          <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
-        </picture>
+      <a href="index.html">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
       </a>
     </div>
     <div class="header-text">
@@ -37,15 +34,15 @@
     </div>
   </header>
 
-  <nav id="main-nav" class="hidden">
-    <a href="promocoes">Promoções</a>
+  <nav>
+    <a href="">Promoções</a>
     <a href="cupom">Cupom de Desconto</a>
     <a href="sobre">Sobre</a>
     <a href="contato">Contato</a>
   </nav>
 
   <div class="container">
-    <aside id="sidebar" class="sidebar hidden">
+    <aside class="sidebar">
       <h3>Categorias</h3>
       <ul>
         <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')" aria-label="Filtrar por todas as categorias"><i class="fas fa-list mr-2"></i>Todas</li>
@@ -67,92 +64,86 @@
       </ul>
     </aside>
 
-    <main>
-      <section>
-        <h2>🛍️ Ofertas do Dia</h2>
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-4531749081462125"
-             data-ad-slot="5690664546"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-        <div class="lojas-parceiras">
-          <h3>🌟 Lojas Parceiras</h3>
-          <div class="grid-lojas">
-            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')" aria-label="Filtrar por todas as lojas"><span>Todas as Lojas</span></div>
-            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" aria-label="Filtrar por Amazon">
-              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
-            </div>
-            <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')" aria-label="Filtrar por Magalu">
-              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
-            </div>
-            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')" aria-label="Filtrar por Shein">
-              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
-            </div>
-            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" aria-label="Filtrar por Shopee">
-              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
-            </div>
-            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" aria-label="Filtrar por Mercado Livre">
-              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
-            </div>
-            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" aria-label="Filtrar por Alibaba">
-              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
-            </div>
-          </div>
+<main>
+  <section>
+    <h2> Ofertas do Dia</h2>
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-4531749081462125"
+         data-ad-slot="5690664546"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <div class="lojas-parceiras">
+      <h3> Lojas Parceiras</h3>
+      <div class="grid-lojas">
+        <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')" aria-label="Filtrar por todas as lojas"><span>Todas as Lojas</span></div>
+        <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" aria-label="Filtrar por Amazon">
+          <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
         </div>
-        <div class="search-container">
-          <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Pesquisar produtos">
-          <i class="fas fa-search search-icon"></i>
+        <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')" aria-label="Filtrar por Magalu">
+          <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
         </div>
-        <div id="busca-feedback" class="busca-feedback"></div>
-        <div class="loading-spinner" id="loading-spinner"></div>
-        <div class="grid-produtos" id="grid-produtos"></div>
-        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
-        <p class="error-message" id="error-message" style="display: none;"></p>
-        <div class="paginacao" id="paginacao">
-          <button id="prev-page" disabled aria-label="Página anterior">Anterior</button>
-          <span id="page-info">Página 1</span>
-          <button id="next-page" aria-label="Próxima página">Próxima</button>
+        <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')" aria-label="Filtrar por Shein">
+          <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
         </div>
-      </section>
-      <div class="social-links">
-        <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no TikTok">
-          <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
-          <span>TikTok</span>
-        </a>
-        <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no Instagram">
-          <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
-          <span>Instagram</span>
-        </a>
-        <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no X">
-          <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40"></div>
-          <span>X</span>
-        </a>
-        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no YouTube">
-          <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
-          <span>YouTube</span>
-        </a>
+        <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" aria-label="Filtrar por Shopee">
+          <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
+        </div>
+        <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" aria-label="Filtrar por Mercado Livre">
+          <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
+        </div>
+        <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" aria-label="Filtrar por Alibaba"> <!-- Corrigido data-lojaconforte-loja -->
+          <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
+        </div>
       </div>
-      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco no WhatsApp">📲 WhatsApp</a>
-      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer" aria-label="Junte-se ao nosso Telegram">📢 Telegram</a>
-    </main>
+    </div>
+    <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Pesquisar produtos">
+    <div id="busca-feedback" class="busca-feedback"></div>
+    <div class="loading-spinner" id="loading-spinner"></div>
+    <div class="grid-produtos" id="grid-produtos"></div>
+    <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+    <p class="error-message" id="error-message" style="display: none;"></p>
+    <div class="paginacao" id="paginacao">
+      <button id="prev-page" disabled aria-label="Página anterior">Anterior</button>
+      <span id="page-info">Página 1</span>
+      <button id="next-page" aria-label="Próxima página">Próxima</button>
+    </div>
+  </section>
+  <div class="social-links">
+    <a href="https://www.tiktok.com/@cdc.centraldecompras" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no TikTok">
+      <div class="icon"><img src="logos/tiktok.png" alt="TikTok" loading="lazy" width="40" height="40"></div>
+      <span>TikTok</span>
+    </a>
+    <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no Instagram">
+      <div class="icon"><img src="logos/Instagram.png" alt="Instagram" loading="lazy" width="40" height="40"></div>
+      <span>Instagram</span>
+    </a>
+    <a href="https://x.com/ComprasCdc" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no X">
+      <div class="icon"><img src="logos/X.png" alt="X" loading="lazy" width="40" height="40"></div>
+      <span>X</span>
+    </a>
+    <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank" rel="noopener noreferrer" aria-label="Siga-nos no YouTube">
+      <div class="icon"><img src="logos/youtube.png" alt="YouTube" loading="lazy" width="40" height="40"></div>
+      <span>YouTube</span>
+    </a>
   </div>
+  <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Fale conosco no WhatsApp"> WhatsApp</a>
+  <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer" aria-label="Junte-se ao nosso Telegram"> Telegram</a>
+</main>  </div>
 
   <div class="modal" id="imageModal" aria-label="Modal de visualização de imagens">
     <button class="modal-close" onclick="closeModal()" aria-label="Fechar modal">✕</button>
     <div class="modal-content">
       <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
       <button class="carrossel-prev" onclick="moveModalCarrossel(-1)" aria-label="Imagem anterior">◄</button>
-      <button class="carrossel-next" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem">▶</button>
+      <button class="carrossel-next" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem"></button>
       <div class="carrossel-dots" id="modalCarrosselDots"></div>
     </div>
   </div>
 
   <footer>
-    <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+    <p> Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
   </footer>
 
   <div class="robo-assistente">
@@ -165,3 +156,4 @@
   <script defer src="script.js"></script>
 </body>
 </html>
+
