--- a/index.html
+++ b/index.html
@@ -4,99 +4,137 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Centro de Compras - Ofertas do Dia</title>
-  <meta name="description" content="Encontre as melhores promoções e cupons das principais lojas: Amazon, Magalu, Shopee, Shein e muito mais!">
+  <meta name="description" content="Encontre as melhores ofertas em eletrônicos, moda, casa, beleza e muito mais nas maiores lojas do Brasil.">
   <meta name="google-adsense-account" content="ca-pub-4531749081462125">
   <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Fonts, Favicon e Manifest -->
   <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-  <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
+  <link rel="icon" href="logos/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="logos/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
   <link rel="manifest" href="logos/site.webmanifest">
+
+  <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
+
+  <!-- Dados estruturados básicos -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Organization",
+    "@type": "WebSite",
     "name": "Centro de Compras",
-    "url": "https://seudominio.com",
-    "logo": "https://seudominio.com/logos/logoscentrodecompras.jpeg",
-    "sameAs": [
-      "https://www.instagram.com/cdccentrodecompras/",
-      "https://x.com/ComprasCdc",
-      "https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA"
-    ]
+    "url": "https://seudominio.com"
   }
   </script>
 </head>
-
 <body>
-  <header class="site-header" role="banner">
+  <header class="site-header">
     <div class="logo-container">
       <a href="index.html">
-        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" width="150" height="50">
+        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
       </a>
     </div>
     <div class="header-text">
+      <h1>Centro de Compra</h1>
       <p>O maior portal de compras do Brasil! Encontre as melhores ofertas.</p>
     </div>
   </header>
 
-  <nav role="navigation" aria-label="Menu principal">
+  <nav>
     <a href="index.html">Promoções</a>
     <a href="cupom.html">Cupom de Desconto</a>
     <a href="sobre.html">Sobre</a>
     <a href="contato.html">Contato</a>
   </nav>
 
-  <div class="container" role="main">
-    <aside class="sidebar" aria-label="Categorias de Produtos">
+  <div class="container">
+    <aside class="sidebar">
       <h3>Categorias</h3>
       <ul>
-        <!-- ... suas categorias aqui ... -->
+        <!-- Mantido conforme seu HTML original -->
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')"><i class="fas fa-list mr-2"></i>Todas</li>
+        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
+        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')"><i class="fas fa-tshirt mr-2"></i>Moda</li>
+        <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
+        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')"><i class="fas fa-home mr-2"></i>Casa</li>
+        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')"><i class="fas fa-magic mr-2"></i>Beleza</li>
+        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')"><i class="fas fa-futbol mr-2"></i>Esportes</li>
+        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')"><i class="fas fa-book mr-2"></i>Livros</li>
+        <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')"><i class="fas fa-baby mr-2"></i>Infantil</li>
+        <li class="categoria-item" data-categoria="celulares" onclick="filtrarPorCategoria('celulares')"><i class="fas fa-mobile-alt mr-2"></i>Celulares</li>
+        <li class="categoria-item" data-categoria="eletrodomesticos" onclick="filtrarPorCategoria('eletrodomesticos')"><i class="fas fa-blender mr-2"></i>Eletrodomésticos</li>
+        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')"><i class="fas fa-paw mr-2"></i>Pet</li>
+        <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')"><i class="fas fa-leaf mr-2"></i>Jardinagem</li>
+        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')"><i class="fas fa-car mr-2"></i>Automotivo</li>
+        <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')"><i class="fas fa-utensils mr-2"></i>Gastronomia</li>
+        <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')"><i class="fas fa-gamepad mr-2"></i>Games</li>
       </ul>
     </aside>
 
     <main>
-      <h1>🛍️ Ofertas do Dia</h1>
       <section>
+        <h2>🛍️ Ofertas do Dia</h2>
         <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px"
              data-ad-client="ca-pub-4531749081462125"
              data-ad-slot="5690664546"></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </section>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
-      <section aria-label="Lojas Parceiras">
-        <h2>🌟 Lojas Parceiras</h2>
-        <div class="grid-lojas">
-          <!-- ... imagens das lojas ... -->
+        <div class="lojas-parceiras">
+          <h3>🌟 Lojas Parceiras</h3>
+          <div class="grid-lojas">
+            <div class="loja-todas ativa" onclick="filtrarPorLoja('todas')"><span>Todas as Lojas</span></div>
+            <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
+              <img src="logos/amazon.png" alt="Amazon" loading="lazy" width="100" height="40"><span>Amazon</span>
+            </div>
+            <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
+              <img src="logos/magalu.png" alt="Magalu" loading="lazy" width="100" height="40"><span>Magalu</span>
+            </div>
+            <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')">
+              <img src="logos/shein.png" alt="Shein" loading="lazy" width="100" height="40"><span>Shein</span>
+            </div>
+            <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
+              <img src="logos/shopee.png" alt="Shopee" loading="lazy" width="100" height="40"><span>Shopee</span>
+            </div>
+            <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
+              <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
+            </div>
+            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')">
+              <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
+            </div>
+          </div>
+        </div>
+
+        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca">
+        <div id="busca-feedback" class="busca-feedback"></div>
+        <div class="loading-spinner" id="loading-spinner"></div>
+        <div class="grid-produtos" id="grid-produtos"></div>
+        <p class="mensagem-vazia" id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</p>
+        <p class="error-message" id="error-message" style="display: none;"></p>
+        <div class="paginacao" id="paginacao">
+          <button id="prev-page" disabled>Anterior</button>
+          <span id="page-info">Página 1</span>
+          <button id="next-page">Próxima</button>
         </div>
       </section>
 
-      <section aria-label="Busca de Produtos">
-        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos">
-        <div id="grid-produtos"></div>
-        <p class="mensagem-vazia" id="mensagem-vazia" hidden>Nenhum produto encontrado.</p>
-      </section>
+      <div class="social-links">
+        <!-- Seus links de redes sociais aqui -->
+      </div>
 
-      <section class="social-links" aria-label="Redes Sociais">
-        <!-- links de TikTok, Instagram, etc. -->
-      </section>
-
-      <section class="mensagens">
-        <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">📲 WhatsApp</a>
-        <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">📢 Telegram</a>
-      </section>
+      <a href="https://api.whatsapp.com/send?phone=5521975179737" class="whatsapp" target="_blank" rel="noopener noreferrer">📲 WhatsApp</a>
+      <a href="https://t.me/centraldecomprascdc" class="telegram" target="_blank" rel="noopener noreferrer">📢 Telegram</a>
     </main>
   </div>
 
-  <footer role="contentinfo">
+  <footer>
     <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
     <div class="credibilidade-nota">
-      <p><strong>Nota:</strong> Este site é afiliado e redireciona para lojas parceiras. Verifique a validade das promoções.</p>
+      <p><strong>Sobre credibilidade:</strong> Este site é afiliado e redireciona para plataformas externas. Verifique os cupons diretamente na loja.</p>
     </div>
   </footer>
 
